<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#363434"
    tools:context=".activity_valoracion">

    <Button
        android:id="@+id/buttonValoracion"
        android:layout_width="287dp"
        android:layout_height="66dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="24dp"
        android:background="@color/quantum_vanillagreen700"
        android:onClick="Valorar"
        android:shadowColor="#1CDD24"
        android:text="@string/buttonValoracion"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBarValoracion"
        app:layout_constraintVertical_bias="0.502" />

    <TextView
        android:id="@+id/textEventoExpl"
        android:layout_width="186dp"
        android:layout_height="59dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="40dp"
        android:text="@string/textEventoExpl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/nombreEvento" />

    <TextView
        android:id="@+id/preguntaEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/preguntaEvento"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEventoExpl" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="84dp"
        android:layout_height="124dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreEvento"
        app:srcCompat="@android:drawable/checkbox_on_background" />

    <TextView
        android:id="@+id/nombreEvento"
        android:layout_width="409dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="128dp"
        android:textColor="#FFFFFF"
        android:layout_marginRight="128dp"
        android:gravity="center"
        android:text="@string/nombreEvento"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/ratingBarValoracion"
        android:layout_width="237dp"
        android:layout_height="67dp"
        android:layout_marginTop="25dp"
        android:numStars="5"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preguntaEvento" />

</androidx.constraintlayout.widget.ConstraintLayout>