<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#363434"
    tools:context=".activity_evento_participante">

    <TextView
        android:id="@+id/tv_hora2"
        android:layout_width="145dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:text="HoraFake"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toEndOf="@+id/Hora"
        app:layout_constraintTop_toBottomOf="@+id/deporte" />

    <TextView
        android:id="@+id/eventoText"
        android:layout_width="145dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="PrincipiantFake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numeroAsistentes" />

    <TextView
        android:id="@+id/deporte"
        android:layout_width="311dp"
        android:textColor="#FFFFFF"

        android:layout_height="45dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="Deporte"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonApuntarse"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"

        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/button_signup"
        android:onClick="ApuntarseDesapuntarse"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:text="@string/Hora"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deporte" />

    <TextView
        android:id="@+id/Fecha"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Fecha"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Hora" />


    <TextView
        android:id="@+id/tv_fecha"
        android:layout_width="145dp"
        android:layout_height="30dp"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:text="FechaFake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toEndOf="@+id/Fecha"
        app:layout_constraintTop_toBottomOf="@+id/tv_hora2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:layout_marginTop="40dp"
        android:text="@string/NumParticipantes"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Fecha" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/NumAsistentes"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/numeroAsistentes"
        android:layout_width="44dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:text="123"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/numeroParticipantes" />

    <TextView
        android:id="@+id/numeroParticipantes"
        android:layout_width="44dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="number"
        android:text="1223"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/tv_fecha" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:inputType="textMultiLine"
        android:text=" SensacionalFake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTitle" />

    <TextView
        android:id="@+id/descriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:layout_marginTop="24dp"
        android:text="@string/DescripcionEvento"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:layout_marginTop="32dp"
        android:text="@string/NivelEvento"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageView
        android:id="@+id/infoView"
        android:layout_width="36dp"
        android:layout_height="41dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/quantum_googblue500"
        android:onClick="MostrarInfoDeporte"
        android:shape="ring"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toEndOf="@+id/deporte"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

</androidx.constraintlayout.widget.ConstraintLayout>